# HarmonicMotion

./: .gitignore  .gitmodules  Cinder  LICENCE  README.md  to do.md
Core/: to do.md
Core/include/: BaseData.h  Common.h  Data.h  Event.h  FactoryNode.h  Functions.h  ListValue.h  NodeUnthreaded.h  Pipeline.h  Point3d.h  Skeleton3d.h  Type.h  TypeTraits.h
Core/include/nodes/: NodeBlobTracker.h  NodeFilter.h  NodeImageProcessor.h  NodeKinect.h  NodeMovingAverage.h  NodeSpeedAcceleration.h  NodeVelocity.h
Core/lib/macosx/: libnimRecorder.dylib
Core/src/: BaseData.cpp  Common.cpp  DataNull.cpp  Functions.cpp  ListValue.cpp  PatchCord.cpp  Pipeline.cpp  Value.cpp
Core/src/nodes/: NodeAccumulator.cpp  NodeBlobTracker.cpp  NodeImageProcessor.cpp  NodeKinect.cpp  NodeMixer.cpp  (+5 more)
Core/vc11/: HarmonicMotion.vcxproj
Gui/: .gitignore
Gui/src/: Controller.cpp  Controller.h  PipelineListener.cpp  WidgetLet.h  WidgetMonitor.h  WidgetNewPatchCord.h  WidgetNodeList.cpp  WidgetNodePrototype.h
examples/: Basic skeleton to OSC (Kinect).json  Blob tracking (Webcam).json  Depth image statistics (Kinect).json  Hand dynamics from Impossible Alone (Kinect).json  Optical Flow (Webcam).json  Quantity of motion from User Index (Kinect).json
include/: BaseData.h  Common.h  Data.h  DataNull.h  DataType.h  Event.h  FactoryNode.h  Filter.h  Functions.h  GeneratorConstantValue.h  GeneratorSineWave.h  HarmonicMotion.h  Image2d.h  Inlet.h  Let.h  List.h  ListPoint2d.h  ListPoint3d.h  ListValue.h  Listener.h  Node.h  NodeAccumulator.h  NodeFilter.h  NodeKinect.h  NodeOscOut.h  NodeRenderer.h  NodeThreaded.h  NodeUnthreaded.h  Outlet.h  OutputConsolePrinter.h  OutputOsc.h  Parameter.h  PatchCord.h  Pipeline.h  Point2d.h  Point3d.h  Predictor.h  Renderer.h  Scene3d.h  SceneMeta.h  (+4 more)
include/Core/: BaseData.h  Common.h  Data.h  DataNull.h  Event.h  EventDispatcher.h  Functions.h  HarmonicMotion.h  Image2d.h  Inlet.h  Let.h  List.h  ListPoint3d.h  Listener.h  Node.h  Outlet.h  Parameter.h  PatchCord.h  Point2d.h  Point3d.h  Renderer.h  Scene3d.h  SceneMeta.h  Skeleton3d.h  Type.h  TypeTraits.h  Types.h  Value.h
include/Gui/: MainWindow.h  MetatypeDeclarations.h  MouseGrabber.h  PatchAreaMousePressFilter.h  PipelineListener.h  Utilities.h  WidgetConsoleView.h  WidgetMonitor.h  WidgetOutlet.h  WidgetPatchArea.h  WidgetRenderView.h
include/nodes/: Filter.h  NodeAccumulator.h  NodeBlobTracker.h  NodeCamera.h  NodeExpression.h  NodeFilter.h  NodeImageProcessor.h  NodeKinect.h  NodeMixer.h  NodeMovingAverage.h  NodeOscOut.h  NodePeakDecay.h  NodePrinter.h  NodeRenderer.h  NodeSelectJoint.h  NodeSelectSkeleton.h  NodeSineWave.h  NodeSpeed.h  NodeSpeedAcceleration.h  NodeStandardDeviation.h  Predictor.h
lib/macosx/: libOpenNI.dylib  libXnCore.dylib  libXnDDK.dylib  libXnDeviceFile.dylib  libXnDeviceSensorV2KM.dylib  libXnFormats.dylib  libXnVCNITE_1_3_1.dylib  libXnVHandGenerator_1_3_1.dylib  libXnVNite_1_3_1.dylib  libltdl.7.dylib  libnimCodecs.dylib  libnimMockNodes.dylib  libnimRecorder.dylib  libusb-1.0.0.dylib
other/: copy_in_dlls.bat  copy_in_dylibs.sh
resources/: myresources.qrc
resources/qss/: WidgetLet.qss  WidgetNode.qss  WidgetNodePrototype.qss  WidgetOutlet.qss  WidgetPatchCord.qss
resources/shaders/: f_UserIndexTexture.glsl  v_TexturePassthrough.glsl
src/: Application.cpp  Application.h  BaseData.cpp  CMakeLists.txt  Common.cpp  Controller.cpp  Controller.h  Data.cpp  Data.h  DataNull.cpp  DataType.cpp  Event.cpp  EventDispatcher.cpp  FactoryNode.cpp  Functions.cpp  GeneratorConstantValue.cpp  GeneratorSineWave.cpp  HarmonicMotionApp.cpp  Image2d.cpp  Inlet.cpp  Let.cpp  ListPoint3d.cpp  ListValue.cpp  MainWindow.cpp  MainWindow.h  MetatypeDeclarations.h  MouseGrabber.cpp  Node.cpp  NodeAccumulator.cpp  NodeFilter.cpp  NodeKinect.cpp  NodeOscOut.cpp  NodeOscOutWidget.cpp  NodeOscOutWidget.h  NodeRenderer.cpp  NodeRendererGlWidget.cpp  NodeRendererGlWidget.h  NodeThreaded.cpp  NodeUnthreaded.cpp  Outlet.cpp  (+43 more)
src/CMake/: MSVCStaticRuntime.cmake
src/Cinder/: CMakeLists.txt
src/Core/: BaseData.cpp  CMakeLists.txt  Common.cpp  Data.cpp  Event.cpp  EventDispatcher.cpp  Functions.cpp  Image2d.cpp  Inlet.cpp  Let.cpp  ListPoint3d.cpp  Node.cpp  NodeThreaded.cpp  NodeUnthreaded.cpp  Outlet.cpp  Parameter.cpp  PatchCord.cpp  Pipeline.cpp  Point2d.cpp  Point3d.cpp  Renderer.cpp  Scene3d.cpp  SceneMeta.cpp  Skeleton3d.cpp  Type.cpp  TypeTraits.cpp
src/Core/nodes/: NodeAccumulator.cpp  NodeBackgroundSubtractor.cpp  NodeBlobTracker.cpp  NodeCamera.cpp  NodeCompareToHistory.cpp  NodeDepthStats.cpp  NodeExpression.cpp  NodeFilter.cpp  NodeImageProcessor.cpp  NodeKinect.cpp  NodeKinectKinectSdk.cpp  NodeMixer.cpp  NodeMovingAverage.cpp  NodeOpticalFlow.cpp  NodeOscOut.cpp  NodePeakDecay.cpp  NodePrinter.cpp  NodeQuantityOfMotion.cpp  NodeRenderer.cpp  NodeSelectJoint.cpp  NodeSelectSkeleton.cpp  NodeSineWave.cpp  NodeSpeedAcceleration.cpp
src/Gui/: CMakeLists.txt  MainWindow.cpp  MetaTypeDeclarations.cpp  PipelineListener.cpp  Utilities.cpp  WidgetConsoleView.cpp  WidgetInlet.cpp  WidgetMonitor.cpp  WidgetNewPatchCord.cpp  WidgetNode.cpp  WidgetNodeList.cpp  WidgetNodePrototype.cpp  WidgetOutlet.cpp  WidgetParameter.cpp  WidgetPatchArea.cpp  WidgetPatchCord.cpp  WidgetRenderView.cpp  main.cpp
src/nodes/: NodeBlobTracker.cpp  NodeCamera.cpp  NodeExpression.cpp  NodeFilter.cpp  NodeImageProcessor.cpp  NodeKinect.cpp  NodeMixer.cpp  NodeMovingAverage.cpp  NodeOscOut.cpp  NodePeakDecay.cpp  NodePrinter.cpp  NodeRenderer.cpp  NodeSelectJoint.cpp  NodeSelectSkeleton.cpp  NodeSineWave.cpp  NodeSpeedAcceleration.cpp
vc11/: HarmonicMotion.sln  HarmonicMotion.vcxproj.filters
xcode/: CMakeCache.txt  cmake_install.cmake  qrc_myresources.cxx
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  HarmonicMotionGui_cmakeRulesBuildPhase.makeDebug  HarmonicMotionGui_postBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/HarmonicMotion.xcodeproj/: project.pbxproj
xcode/HarmonicMotionGui.xcodeproj/: project.pbxproj
(+434 files in other folders)
